K8s/32-EFK-Stack/03-Kibana/02-kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana-np
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external-facing
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  selector: 
    app: kibana
  ports:
    - port: 80
      targetPort: 5601 
      nodePort: 30000
